Change position of notification wrap to fixed for better appearance.

--- a/Jira.Extension.Chrome/css/main.css
+++ b/Jira.Extension.Chrome/css/main.css
@@ -194,7 +194,7 @@
 }
 
 .notification-wrap {
-    position: absolute;
+    position: fixed;
     top: -50px;
     right: 25px;
     height: 0;
